test/expected/file-declare_x.out
cdecl> declare x int
                 ^
data/declare_x.cdecl:1,11: syntax error: "int": "as" expected ("int" is a keyword)
